--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -7,9 +7,9 @@
     z-index: 1024;
   }
   &-logo {
-    height: 40px;
+    height: auto;
     img {
-      height: 100%;
+      height: 40px;
       width: auto;
     }
   }
@@ -58,7 +58,7 @@
   .header-holder {
     position: relative;
   }
-  .header-logo {
+  .header-logo img {
     height: 30px;
   }
   .header-menu-toggle {
@@ -80,16 +80,17 @@
     &.active {
       ul {
         max-height: 500px;
+        box-shadow: 0px 20px 10px 0px #AAAAAA;
       }
-      &:after {
-        content: '';
-        display: block;
-        position: absolute;
-        height: 100vh;
-        width: 100%;
-        background: rgba(0,0,0,0.3);
-        z-index: 900;
-      }
+      //&:after {
+      //  content: '';
+      //  display: block;
+      //  position: absolute;
+      //  height: 100vh;
+      //  width: 100%;
+      //  background: rgba(0,0,0,0.3);
+      //  z-index: 900;
+      //}
     }
   }
   .header-menu,
