--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -66,6 +66,7 @@
     background: none;
     border: none;
     cursor: pointer;
+    color: $font-dark-green;
     &:focus {
       outline: none;
     }
